src/objects/powerpack__Calendar_Setting__c.object
<CustomObject>
    <description>CalendarEverything by CloudAnswers</description>
    <fields>
        <fullName>powerpack__Color_Field__c</fullName>
        <label>Color Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>powerpack__Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>powerpack__End_Field_Name__c</fullName>
        <label>End Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>powerpack__Filter_JSON__c</fullName>
        <label>Filter JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>powerpack__Hover_Fields__c</fullName>
        <description>Contains a comma separated list of fields to display on hover</description>
        <label>Hover Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>powerpack__Owner_Field_Name__c</fullName>
        <label>Owner Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>powerpack__Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>powerpack__Start_Field_Name__c</fullName>
        <label>Start Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>powerpack__Target_Object_Type__c</fullName>
        <label>Target Object Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>powerpack__Title_Field_Name__c</fullName>
        <label>Title Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Calendar</label>
    <nameField>
        <label>Calendar</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>